# dreamformer

./: .gitignore  DreamFormer_ Dual-Memory Transformer.txt  PROGRESS.md  README.md  experimental_validation_plan.md  project_desc_old.md  pyproject.toml
configs/: char_lm_real_compute.json  continual_real_compute.json  continual_smoke.json  phase_a_needle_real_compute.json  phase_a_real_compute.json  phase_a_smoke.json
docs/: CONFIG_REFERENCE.md  IMPLEMENTATION_NOTES.md  RUNBOOK.md
scripts/: phase_a_benchmark.py  report_results.py  run_ablation_sweep.py  run_continual_eval.py  run_experiment.py  smoke_train.py
src/dreamformer/: __init__.py  config.py  experiments.py  memory.py  metrics.py  model.py  replay.py  tasks.py  trainer.py  workflows.py
tests/: test_experiments.py  test_memory.py  test_metrics.py  test_model.py  test_replay.py  test_tasks.py  test_trainer.py  test_workflows.py
